{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 103,
  "lineage": "b85ce723-d771-a20c-62a1-260a75788d0d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "EIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05fc2a095c68a5dcb",
            "arn": "arn:aws:ec2:ap-southeast-1:009160061336:elastic-ip/eipalloc-05fc2a095c68a5dcb",
            "domain": "vpc",
            "id": "eipalloc-05fc2a095c68a5dcb",
            "network_border_group": "ap-southeast-1",
            "public_dns": "ec2-52-76-175-185.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "52.76.175.185",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Elasic IP"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "Elasic IP",
              "Owner": "James",
              "Project": "Terraform Learning"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ddb3458f64a80ad1",
            "arn": "arn:aws:ec2:ap-southeast-1:009160061336:elastic-ip/eipalloc-0ddb3458f64a80ad1",
            "domain": "vpc",
            "id": "eipalloc-0ddb3458f64a80ad1",
            "network_border_group": "ap-southeast-1",
            "public_dns": "ec2-13-214-9-153.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.214.9.153",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "Environment": "Test",
              "Owner": "James",
              "Project": "Terraform Learning"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Server1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ac0f5ac9a9b402fa",
            "arn": "arn:aws:ec2:ap-southeast-1:009160061336:instance/i-0347c3863732b50a2",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0347c3863732b50a2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "public_key.pub",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-079a396bc291871e4",
            "private_dns": "ip-10-10-1-63.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.1.63",
            "public_ip": "54.179.214.203",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "tags_all": {
                  "Environment": "Test",
                  "Owner": "James",
                  "Project": "Terraform Learning"
                },
                "throughput": 0,
                "volume_id": "vol-0c23c1de65ffe64f5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-088886ba15c67dabd",
            "tags": {
              "Name": "EC2_Testbed"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "EC2_Testbed",
              "Owner": "James",
              "Project": "Terraform Learning"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06b6e923b953beae7"
            ]
          },
          "dependencies": [
            "aws_key_pair.key-pair",
            "aws_security_group.sg1",
            "aws_subnet.pub-subnets",
            "aws_vpc.Pro-VPC",
            "tls_private_key.ec2key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:009160061336:internet-gateway/igw-0c8987e5733fcea21",
            "id": "igw-0c8987e5733fcea21",
            "owner_id": "009160061336",
            "tags": {
              "Name": "prod IGW"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "prod IGW",
              "Owner": "James",
              "Project": "Terraform Learning"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NAT_Gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05fc2a095c68a5dcb",
            "association_id": "eipassoc-00de2a8f3b00c35da",
            "connectivity_type": "public",
            "id": "nat-0b0e60766f406ef3d",
            "network_interface_id": "eni-0d7ed746964bed468",
            "private_ip": "10.10.1.39",
            "public_ip": "52.76.175.185",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-088886ba15c67dabd",
            "tags": {
              "Name": "gw NAT"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "gw NAT",
              "Owner": "James",
              "Project": "Terraform Learning"
            }
          },
          "dependencies": [
            "aws_eip.EIP",
            "aws_subnet.pub-subnets",
            "aws_vpc.Pro-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:009160061336:route-table/rtb-0ac5dfdbbb8630e92",
            "id": "rtb-0ac5dfdbbb8630e92",
            "owner_id": "009160061336",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0b0e60766f406ef3d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private route table"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "private route table",
              "Owner": "James",
              "Project": "Terraform Learning"
            },
            "timeouts": null,
            "vpc_id": "vpc-032d1def7642e9076"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.EIP",
            "aws_nat_gateway.NAT_Gateway",
            "aws_subnet.pub-subnets",
            "aws_vpc.Pro-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:009160061336:route-table/rtb-0f523550859193fc5",
            "id": "rtb-0f523550859193fc5",
            "owner_id": "009160061336",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c8987e5733fcea21",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public route table"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "public route table",
              "Owner": "James",
              "Project": "Terraform Learning"
            },
            "timeouts": null,
            "vpc_id": "vpc-032d1def7642e9076"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_vpc.Pro-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-rtb-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private-subnet-1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b4a61987432cc724",
            "route_table_id": "rtb-0ac5dfdbbb8630e92",
            "subnet_id": "subnet-0fb61d15990ea294c"
          },
          "dependencies": [
            "aws_eip.EIP",
            "aws_nat_gateway.NAT_Gateway",
            "aws_route_table.private-rtb",
            "aws_subnet.private-subnets",
            "aws_subnet.pub-subnets",
            "aws_vpc.Pro-VPC"
          ]
        },
        {
          "index_key": "private-subnet-2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bdfd8d22d19e8ef2",
            "route_table_id": "rtb-0ac5dfdbbb8630e92",
            "subnet_id": "subnet-0cbad2fb1578f2596"
          },
          "dependencies": [
            "aws_eip.EIP",
            "aws_nat_gateway.NAT_Gateway",
            "aws_route_table.private-rtb",
            "aws_subnet.private-subnets",
            "aws_subnet.pub-subnets",
            "aws_vpc.Pro-VPC"
          ]
        },
        {
          "index_key": "private-subnet-3",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07770b65b47dab3c2",
            "route_table_id": "rtb-0ac5dfdbbb8630e92",
            "subnet_id": "subnet-0b701b8cd48a5ff60"
          },
          "dependencies": [
            "aws_eip.EIP",
            "aws_nat_gateway.NAT_Gateway",
            "aws_route_table.private-rtb",
            "aws_subnet.private-subnets",
            "aws_subnet.pub-subnets",
            "aws_vpc.Pro-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-rtb-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "pub-subnet-1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c7b0ced4ba4cb168",
            "route_table_id": "rtb-0f523550859193fc5",
            "subnet_id": "subnet-088886ba15c67dabd"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.public-rtb",
            "aws_subnet.pub-subnets",
            "aws_vpc.Pro-VPC"
          ]
        },
        {
          "index_key": "pub-subnet-2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bd52839cc53ef1c2",
            "route_table_id": "rtb-0f523550859193fc5",
            "subnet_id": "subnet-050287521c8d836fc"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.public-rtb",
            "aws_subnet.pub-subnets",
            "aws_vpc.Pro-VPC"
          ]
        },
        {
          "index_key": "pub-subnet-3",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0784f8b8b45c3ae8b",
            "route_table_id": "rtb-0f523550859193fc5",
            "subnet_id": "subnet-07ecead09fd6d2f48"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.public-rtb",
            "aws_subnet.pub-subnets",
            "aws_vpc.Pro-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:009160061336:security-group/sg-06b6e923b953beae7",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-06b6e923b953beae7",
            "ingress": [],
            "name": "Test-1",
            "name_prefix": "",
            "owner_id": "009160061336",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg-1-EC2"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "sg-1-EC2",
              "Owner": "James",
              "Project": "Terraform Learning"
            },
            "timeouts": null,
            "vpc_id": "vpc-032d1def7642e9076"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Pro-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private-subnet-1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:009160061336:subnet/subnet-0fb61d15990ea294c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.10.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fb61d15990ea294c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "009160061336",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private Subnet 1"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "private Subnet 1",
              "Owner": "James",
              "Project": "Terraform Learning"
            },
            "vpc_id": "vpc-032d1def7642e9076"
          },
          "dependencies": [
            "aws_vpc.Pro-VPC"
          ]
        },
        {
          "index_key": "private-subnet-2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:009160061336:subnet/subnet-0cbad2fb1578f2596",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.10.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cbad2fb1578f2596",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "009160061336",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private Subnet 2"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "private Subnet 2",
              "Owner": "James",
              "Project": "Terraform Learning"
            },
            "vpc_id": "vpc-032d1def7642e9076"
          },
          "dependencies": [
            "aws_vpc.Pro-VPC"
          ]
        },
        {
          "index_key": "private-subnet-3",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:009160061336:subnet/subnet-0b701b8cd48a5ff60",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.10.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b701b8cd48a5ff60",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "009160061336",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private Subnet 3"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "private Subnet 3",
              "Owner": "James",
              "Project": "Terraform Learning"
            },
            "vpc_id": "vpc-032d1def7642e9076"
          },
          "dependencies": [
            "aws_vpc.Pro-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "pub-subnet-1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:009160061336:subnet/subnet-088886ba15c67dabd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-088886ba15c67dabd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "009160061336",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet 1"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "Public Subnet 1",
              "Owner": "James",
              "Project": "Terraform Learning"
            },
            "vpc_id": "vpc-032d1def7642e9076"
          },
          "dependencies": [
            "aws_vpc.Pro-VPC"
          ]
        },
        {
          "index_key": "pub-subnet-2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:009160061336:subnet/subnet-050287521c8d836fc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-050287521c8d836fc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "009160061336",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet 2"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "Public Subnet 2",
              "Owner": "James",
              "Project": "Terraform Learning"
            },
            "vpc_id": "vpc-032d1def7642e9076"
          },
          "dependencies": [
            "aws_vpc.Pro-VPC"
          ]
        },
        {
          "index_key": "pub-subnet-3",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:009160061336:subnet/subnet-07ecead09fd6d2f48",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.10.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07ecead09fd6d2f48",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "009160061336",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet 3"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "Public Subnet 3",
              "Owner": "James",
              "Project": "Terraform Learning"
            },
            "vpc_id": "vpc-032d1def7642e9076"
          },
          "dependencies": [
            "aws_vpc.Pro-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Pro-VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:009160061336:vpc/vpc-032d1def7642e9076",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-054f930d3379b0b36",
            "default_route_table_id": "rtb-0b9ea4738a985c692",
            "default_security_group_id": "sg-06b5d3e3d36e53abe",
            "dhcp_options_id": "dopt-0f6985a5765a4b343",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-032d1def7642e9076",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b9ea4738a985c692",
            "owner_id": "009160061336",
            "tags": {
              "Name": "VPC-Thor"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "VPC-Thor",
              "Owner": "James",
              "Project": "Terraform Learning"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_engress_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:009160061336:security-group-rule/sgr-09ada552165eec27d",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-09ada552165eec27d",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-06b6e923b953beae7",
            "security_group_rule_id": "sgr-09ada552165eec27d",
            "tags": null,
            "tags_all": {
              "Environment": "Test",
              "Owner": "James",
              "Project": "Terraform Learning"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg1",
            "aws_vpc.Pro-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ingress_ssh_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:009160061336:security-group-rule/sgr-0e1676fe9595050dd",
            "cidr_ipv4": "10.10.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0e1676fe9595050dd",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-06b6e923b953beae7",
            "security_group_rule_id": "sgr-0e1676fe9595050dd",
            "tags": null,
            "tags_all": {
              "Environment": "Test",
              "Owner": "James",
              "Project": "Terraform Learning"
            },
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg1",
            "aws_vpc.Pro-VPC"
          ]
        }
      ]
    }
  ]
}